Swap to the arduino IDE

--- a/NEDC 2020.2021 SW/README
+++ b/NEDC 2020.2021 SW/README
@@ -1,1 +1,1 @@
-The usage of VSCode is recommended. All necessary extensions are recommended via the workspace file.
+The usage of the Arduino IDE is recommended. All necessary extensions are recommended via the workspace file.
